# kira-scio

./: .gitignore  Cargo.toml  README.md
src/: api.rs  cli.rs  detect.rs  error.rs  lib.rs  model.rs  normalize.rs
src/formats/: bd_rhapsody.rs  dense.rs  h5ad.rs  loom.rs  mod.rs  mtx10x.rs
tests/: edge_cases.rs  smoke.rs
