[package]
name = "kira-scio"
description = "Deterministic single-cell input reader stack for MTX/H5AD/BD Rhapsody in Kira tools."
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/ARyaskov/kira-scio"
keywords = [
    "bioinformatics",
    "single-cell",
    "mtx",
    "h5ad",
    "parser"
]
categories = [
    "science",
    "science::bioinformatics",
    "command-line-utilities",
    "algorithms"
]

[lib]
name = "kira_scio"
path = "src/lib.rs"

[features]
default = []
h5ad = ["dep:hdf5"]
# `loom` is reserved for a future reader; the current `formats::loom` module
# is a placeholder that returns FeatureDisabled regardless of the flag.

[dependencies]
flate2 = { version = "1", features = ["zlib-rs"] }
unicode-normalization = "0.1"
thiserror = "2"
rustc-hash = "2"
tracing = "0.1"
itoa = "1"

[dependencies.hdf5]
version = "0.8"
optional = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
